Bug 1840943 - Avoid closing IMAP mock channels until OnStopRequest completes. r=gds Removes the gist of https://hg.mozilla.org/comm-central/rev/10277c24518637c05ec21f303d7fad5a324e3c0f and implements something similar (and some cleaning up) in the problematic IMAP code.

Differential Revision: https://phabricator.services.mozilla.com/D182428

--HG--
extra : rebase_source : 7251448ea30fbd6c33e2bb90ef28837e544f5d7c